<resources>
    <string name="app_name" translatable="false">MiniSofascore</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sofascore_logo" translatable="false">Sofascore Logo</string>
    <string name="settings">Settings</string>
    <string name="tournaments">Tournaments</string>
    <string name="fulltime">FT</string>
    <string name="start_time" translatable="false">13:00</string>
    <string name="team_home">Team Home</string>
    <string name="team_home_score" translatable="false">2</string>
    <string name="team_away">Team Away</string>
    <string name="team_away_score" translatable="false">0</string>
    <string name="team_away_logo">team away logo</string>
    <string name="team_home_logo">team home logo</string>
    <string name="tournament_logo">tournament logo</string>
    <string name="tournament">Tournament</string>
    <string name="country">Country</string>
    <string name="pointer_right">pointer right</string>
    <string name="sample_date">Wed, 12.02.2024.</string>
    <string name="sample_events">5 Events</string>
    <string name="football">Football</string>
    <string name="basketball">Basketball</string>
    <string name="am_football">Am. Football</string>
    <string name="football1">Football</string>
    <string name="today">Today</string>
    <string name="event_plural">Events</string>
    <string name="event_singular">Event</string>
    <string name="event_none">No Events</string>
    <string name="ft">FT</string>
    <string name="position_symbol" translatable="false">#</string>
    <string name="team">Team</string>
    <string name="initial_played" translatable="false">P</string>
    <string name="initial_wins" translatable="false">W</string>
    <string name="initial_draws" translatable="false">D</string>
    <string name="initial_losses" translatable="false">L</string>
    <string name="goals">Goals</string>
    <string name="abbr_points">pts</string>
    <string name="abbr_difference">diff</string>
    <string name="abbr_streak">Str</string>
    <string name="initial_games_behind">GB</string>
    <string name="abbr_percentage">PCT</string>
    <string name="matches">Matches</string>
    <string name="standings">Standings</string>
    <string name="organization_logo">organization logo</string>
    <string name="country_logo">country logo</string>

    <string name="incident_icon">incident icon</string>
    <string name="sample_minute" translatable="false">87\'</string>
    <string name="sample_player_name" translatable="false">Lionel Messi</string>
    <string name="sample_incident_type">Foul</string>
    <string name="sample_football_score" translatable="false">1</string>
    <string name="minus" translatable="false">-</string>
    <string name="period_sample" translatable="false">HT (2–1)</string>
    <string name="foul">Foul</string>
    <string name="back_arrow">back arrow</string>
    <string name="sample_tournament_round">Football, Spain, LaLiga, Round 15</string>
    <string name="full_time">Full Time</string>
    <string name="round">Round</string>
    <string name="no_results_yet">No results yet.</string>
    <string name="view_tournament_details">View Tournament Details</string>
    <string name="sport_icon">sport icon</string>
    <string name="tournament_info" translatable="false">TOURNAMENT_INFO</string>
    <string name="retry">Retry</string>
    <string name="notLoading">Couldn\'t load! Try again?</string>
    <string name="noMatches">There is no matches for this tournament</string>
    <string name="light">Light</string>
    <string name="theme">Theme</string>
    <string name="dark">Dark</string>
    <string name="date_format">Date Format</string>
    <string name="format_european" translatable="false">DD / MM / YYYY</string>
    <string name="format_american" translatable="false">MM / DD / YYYY</string>
    <string name="about">About</string>
    <string name="sofascore_android_academy">Sofascore Android Academy</string>
    <string name="class_2024">Class 2024</string>
    <string name="app_name_settings">App Name</string>
    <string name="mini_sofascore" translatable="false">Mini Sofascore</string>
    <string name="api_credit">API Credit</string>
    <string name="sofascore" translatable="false">Sofascore</string>
    <string name="developer">Developer</string>
    <string name="developer_name" translatable="false">Matko Papić</string>
    <string name="language">Language</string>
    <string name="english" translatable="false">English</string>
    <plurals name="numOfEvents">
        <item quantity="one">%d Event</item>
        <item quantity="other">%d Events</item>
    </plurals>
    <string-array name="languages">
        <item>English</item>
        <item>Hrvatski</item>
    </string-array>

    <string-array name="language_codes">
        <item>en</item>
        <item>hr</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="details">Details</string>
    <string name="squad">Squad</string>
    <string name="team_info">Team Info</string>
    <string name="coach_image">coach image</string>
    <string name="team_players_image">team players image</string>
    <string name="foreign_players_graph">foreign players graph</string>
    <string name="total_players">Total Players</string>
    <string name="foreign_players">Foreign Players</string>
    <string name="venue">Venue</string>
    <string name="stadium">Stadium</string>
    <string name="next_match">Next Match</string>
    <string name="manager">Manager</string>
    <string name="coach">Coach</string>
    <string name="players">Players</string>
    <string name="nationality">Nationality</string>
    <string name="position">Position</string>
    <string name="team_logo">team logo</string>
    <string name="playerDOB">9 Sep 1985</string>
    <string name="playerAge">37 Yrs</string>
</resources>