<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:background="?attr/surface_1"
    >

    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginVertical="12dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/tournament_logo"
        android:src="@drawable/ic_football"
        android:id="@+id/tournament_logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textColor="?attr/on_surface_lv1"
        android:id="@+id/country_name"
        />

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/pointer_right"
        android:src="@drawable/ic_pointer_right"
        android:layout_gravity="center"
        app:tint="?attr/on_surface_lv2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tournament"
        android:layout_gravity="center"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="?attr/on_surface_lv2"
        android:id="@+id/tournament_name"/>


</LinearLayout>