<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingVertical="10dp">

    <TextView
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:text="@string/start_time"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        android:textColor="?attr/on_surface_lv2"
        android:id="@+id/start_time"
        android:layout_marginHorizontal="4dp"
        android:textSize="12sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fulltime"
        android:textColor="?attr/on_surface_lv2"
        app:layout_constraintTop_toBottomOf="@+id/start_time"
        app:layout_constraintStart_toStartOf="@id/start_time"
        app:layout_constraintEnd_toEndOf="@+id/start_time"
        android:layout_marginTop="4dp"
        android:textAlignment="center"
        android:id="@+id/event_time"
        android:textSize="12sp"/>

    <View
        android:layout_width="1dp"
        android:layout_height="40dp"
        android:background="?attr/on_surface_lv4"
        app:layout_constraintStart_toEndOf="@id/start_time"
        app:layout_constraintTop_toTopOf="@id/start_time"
        app:layout_constraintBottom_toBottomOf="@id/event_time"
        android:id="@+id/divider"/>

    <ImageView
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:contentDescription="@string/team_home_logo"
        android:src="@drawable/ic_football"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toTopOf="@id/start_time"
        app:layout_constraintBottom_toBottomOf="@id/start_time"
        android:layout_marginStart="16dp"
        android:id="@+id/team_home_logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_home"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/team_home_logo"
        app:layout_constraintTop_toTopOf="@+id/team_home_logo"
        app:layout_constraintBottom_toBottomOf="@+id/team_home_logo"
        android:id="@+id/team_home_name"
        android:layout_marginStart="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_home_score"
        android:textSize="14sp"
        android:layout_gravity="end"
        android:id="@+id/team_home_score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/team_home_logo"
        app:layout_constraintBottom_toBottomOf="@+id/team_home_logo"
        android:layout_marginEnd="16dp" />

    <ImageView
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:contentDescription="@string/team_away_logo"
        android:src="@drawable/ic_football"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toTopOf="@id/event_time"
        app:layout_constraintBottom_toBottomOf="@id/event_time"
        android:layout_marginStart="16dp"
        android:id="@+id/team_away_logo"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_away"
        app:layout_constraintStart_toEndOf="@+id/team_away_logo"
        app:layout_constraintTop_toTopOf="@id/team_away_logo"
        app:layout_constraintBottom_toBottomOf="@+id/team_away_logo"
        android:id="@+id/team_away_name"
        android:layout_marginStart="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_away_score"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="@+id/team_away_logo"
        app:layout_constraintBottom_toBottomOf="@+id/team_away_logo"
        android:id="@+id/team_away_score"/>


</androidx.constraintlayout.widget.ConstraintLayout>