<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:layoutDirection="ltr"
    android:background="?attr/surface_1"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layoutDirection="ltr"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:id="@+id/incident_icon"
            android:src="@drawable/ic_football"
            android:contentDescription="@string/incident_icon"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="?attr/on_surface_lv2"
            android:text="@string/sample_minute"
            android:textAlignment="center"
            android:id="@+id/time"/>

    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:background="?attr/on_surface_lv4"
        android:id="@+id/divider"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="1"
        android:textSize="20sp"
        android:textColor="?attr/on_surface_lv1"
        android:textStyle="bold"
        android:layout_marginStart="24dp"
        android:layout_gravity="center"
        android:id="@+id/home_team_score"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        android:textAlignment="center"
        android:layout_marginHorizontal="4dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="?attr/on_surface_lv1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="1"
        android:textSize="20sp"
        android:textColor="?attr/on_surface_lv1"
        android:textStyle="bold"
        android:layout_marginEnd="24dp"
        android:layout_gravity="center"
        android:id="@+id/away_team_score"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="?attr/on_surface_lv1"
        tools:text="Lionel Messi"
        android:id="@+id/player_name"
        android:layout_gravity="center"/>

</LinearLayout>